# FindAndSeek

./: .env  .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  theme.json  vite.config.ts
app/: __init__.py  main.py  models.py  routes.py  storage.py
app/services/: __init__.py  ai.py
attached_assets/: Pasted-Find-Seek-Abstract-Find-Seek-is-an-AI-powered-search-and-rescue-platform-that-helps-first-r-1740870709355.txt
backend/: .env.example  .gitignore  gpt.py  image_analyzer.py  main.py  models.py  requirements.txt  run.py  simple_test.py  test_api.py  test_yolo.py  yolo.py
backend/app/: compare_utils.py  image_utils.py  main.py  models.py
client/: vite.config.ts
client/public/: README.md
client/src/: App.tsx
client/src/components/: alerts-panel.tsx  call-button.tsx  camera-grid.tsx  camera-sidebar.tsx  case-file-upload.tsx  image-debug.tsx  interactive-map.tsx  operator-dashboard.tsx  person-card.tsx  person-detector.tsx  role-selector.tsx  search-filters.tsx  timeline-view.tsx  video-player.tsx  voice-input.tsx
client/src/lib/: api.ts  groqSearch.ts  mockAi.ts  mockData.ts  (+2 more)
findandseek/: package-lock.json  package.json
findandseek/app/: globals.css
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
server/: db.ts  index.ts  main.py  routes.ts  simplified-routes.ts  storage.ts
server/services/: ai.ts  call-service.ts  roboflow_detector.py  similarity-search.ts  videoProcessor.ts  yolo_detector.ts
shared/: schema.ts  types.ts
(+23 files in other folders)
